<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MMPITest</string>
    <string name="yes">Да</string>
    <string name="continue_">Продолжить</string>
    <string name="return_to_chosing_users">Вернуться к выбору пользователя</string>
    <string name="no">Нет</string>
    <string name="dont_know">Не знаю</string>
    <string name="action_settings">Settings</string>
    <string name="new_user">Новый пользователь</string>
    <string name="return_to_registration">Вернуться к регистрации</string>
    <string name="existing_user">Существующий пользователь</string>
    <string name="exit_test">Выйти из теста</string>
    <string name="goodbye">До свидания!</string>
    <string name="enter_sex">Выберите свой пол</string>
    <string name="enter_age">Укажите свой возраст</string>
    <string name="enter_name">Укажите ваше имя</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="ok">Принять и продолжить</string>
    <string name="available_users">Доступные пользователи:</string>
    <string name="go_test">Перейти к тестированию и просмотру результатов? </string>
    <string name="delete_user">Удалить пользователя</string>
    <string name="and_his_results">и все его результаты тестирования?</string>
    <string name="do_you_want_to_del">Вы действительно хотите удалить запись пользователя</string>
    <string name="start_test">Начать тест</string>
    <string name="view_results">Посмотреть результаты </string>
    <string name="exit_menu">Выйти в меню</string>
    <string name="again">Заново</string>
    <string name="user_deleting">Удаление пользователя</string>
    <string name="question_text">Текст вопроса</string>
    <string name="liar_text">Ваши ответы признаны недостоверными. </string>
    <string name="liver_text">Вы покинули тест, не ответив на вопрос. </string>
    <string name="again_or_exit_text">Для прохождения теста заново нажмите кнопку «Заново». Для выхода нажмите «В главное меню».</string>
        
    <string name="reliability">Шкала достоверности</string>
    <string name="lie_scale">Шкала лжи</string>
    <string name="correction">Шкала коррекции</string>
    <string name="overcontrol">Шкала сверхконтроля</string>
    <string name="pessimistic">Шкала пессимистичности</string>
    <string name="hysteria">Шкала эмоциональной лабильности</string>
    <string name="feminity_female">Шкала женственности (для женщин)</string>
    <string name="feminity_male">Шкала женственности (для мужчин)</string>
    <string name="stiff">Шкала ригидности</string>
    <string name="anxiety">Шкала тревожности</string>
    <string name="individual">Шкала индивидуальности</string>
    <string name="optimistic">Шкала оптимистичности</string>
    <string name="introversion">Шкала интроверсии</string>
    <string name="impusivity">Шкала импульсивности</string>
    
    <string name="mmpi_quiz">MMPI Тест</string>
    <string name="quiz_num">Тест № </string>
    <string name="there_is_no_quizes">Ещё нет пройденных тестов </string>
    <string name="user_exist">Пользователь с таким именем уже существует</string>
    
    <string name="big_text">
        Вам будет представлена целая серия разных утверждений. Оценивая каждое из них, не тратьте много времени на раздумья. Наиболее естественная – первая непосредственная реакция. Внимательно вчитывайтесь в текст, дочитывая до конца каждое утверждение и оценивая его все целиком как верное или неверное по отношению к Вам.\n
		Если Ваш ответ – <b>«Верно»</b> или <b>«Неверно»</b>, кликните в соответствующем месте, поставив точку.\n
		Обращайте внимание на утверждения с двойными отрицаниями: например, «У меня никогда не было припадков с судорогами». Если не было, то Ваш ответ – <b>«Верно»</b>, и наоборот, если это с Вами было, то Ваш ответ – <b>«Неверно»</b>.\n
		Некоторые утверждения в опроснике звучат так: «Номер данного пункта следует обвести кружочком». В этом случае Вам следует поставить точку, ответив <b>«Не знаю»</b> (эти вопросы для проверки Вашей внимательности).\n
		Если некоторые утверждения вызывают большие сомнения, ориентируйтесь в Вашем ответе на то, что предположительно больше свойственно Вам. Если утверждение верно по отношению к Вам в одних ситуациях и неверно в других, остановитесь на том ответе, который больше подходит в настоящий момент. Лишь в крайнем случае, если утверждение к Вам вообще не подходит, Вы можете ответить «Не знаю». Однако избыток ответов «Не знаю» приведет к недостоверности результатов.\n
		Старайтесь отвечать искренно, иначе Ваши ответы будут распознаны как недостоверные и опрос придется повторить. Отвечая на разные пункты опросника, попытайтесь понять – «Какой (какая) я на самом деле?». Тогда полученные данные могут быть использованы с положительным эффектом для Вас. Результаты обследования не направлены на оценку Вашей личности с точки зрения «плохой» Вы человек или «хороший»: выявляются лишь особенности Вашего темперамента и Ваши профессионально важные качества
    </string>

</resources>