<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/NewUserButtonReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="onButtonReturnClick"
        android:text="@string/return_to_registration" />

    <Button
        android:id="@+id/NewUserButtonContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/NewUserButtonReturn"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="31sp"
        android:gravity="center"
        android:onClick="onButtonContinueClick"
        android:text="@string/ok" />

    <RadioButton
        android:id="@+id/NewUserRadioButtonMale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="27sp"
        android:layout_marginTop="22sp"
        android:layout_toLeftOf="@+id/NewUserRadioButtonFemale"
        android:onClick="onNewUserRadioButtonClick"
        android:text="@string/male" />

    <EditText
        android:id="@+id/NewUserUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32sp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:text="@string/enter_name" />

    <RadioButton
        android:id="@+id/NewUserRadioButtonFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/NewUserRadioButtonMale"
        android:layout_alignBottom="@+id/NewUserRadioButtonMale"
        android:layout_alignRight="@+id/NewUserUserName"
        android:onClick="onNewUserRadioButtonClick"
        android:text="@string/female" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NewUserUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61sp"
        android:text="@string/enter_sex"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>