<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/TestQuestionYesButton"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_alignBaseline="@+id/TestQuestionDontKnowButton"
        android:layout_alignBottom="@+id/TestQuestionDontKnowButton"
        android:layout_alignParentLeft="true"
        android:onClick="onTestQuestionButtonClick"
        android:text="@string/yes" />

    <Button
        android:id="@+id/TestQuestionDontKnowButton"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_alignBaseline="@+id/TestQuestionNoButton"
        android:layout_alignBottom="@+id/TestQuestionNoButton"
        android:onClick="onTestQuestionButtonClick"
        android:layout_centerHorizontal="true"
        android:text="@string/dont_know" />

    <Button
        android:id="@+id/TestQuestionNoButton"
        android:layout_width="100sp"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onTestQuestionButtonClick"
        android:layout_marginBottom="86sp"
        android:text="@string/no" />

    <TextView
        android:id="@+id/TestQuestionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="92sp"
        android:gravity="center"
        android:text="@string/question_text" />

</RelativeLayout>