<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistrationActivity" >

    <Button
        android:id="@+id/RegistartionNewUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="101dp"
        android:onClick="onNewUserButtonClick"
        android:text="@string/new_user" />

    <Button
        android:id="@+id/RegistartionExistingUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/RegistartionNewUserButton"
        android:layout_below="@+id/RegistartionNewUserButton"
        android:layout_marginTop="62dp"
        android:onClick="onExistingUserButtonClick"
        android:text="@string/existing_user" />

    <Button
        android:id="@+id/RegistationExitTestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="onExitTestButtonClick"
        android:text="@string/exit_test" />

</RelativeLayout>