<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/user_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/match_parent"
        android:gravity="center"
        android:layout_marginTop="21sp" />

    <Button
        android:id="@+id/ChooseExistingUserButtonReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:onClick="OnChooseExistingUserButtonReturnClick"
        android:text="@string/return_to_registration" />

    <Button
        android:id="@+id/ChooseExistingUserButtonContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ChooseExistingUserButtonReturn"
        android:layout_alignParentLeft="true"
        android:onClick="OnChooseExistingUserButtonContinueClick"
        android:text="@string/continue_" />

    <TextView
        android:id="@+id/match_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/available_users" />

</RelativeLayout>