<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
       android:id="@+id/scrollView1"
       android:layout_alignParentLeft="true"
       android:layout_alignParentRight="true"
       android:layout_alignParentTop="true" >

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="324sp"
           android:orientation="vertical" >

           <TextView
               android:id="@+id/textView1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/big_text"
               android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    <Button
	        android:id="@+id/StartTestStartTestButton"
	        android:layout_width="150sp"
	        android:layout_height="50sp"
	        android:layout_alignBaseline="@+id/StartTestExitMenuButton"
	        android:layout_alignBottom="@+id/StartTestExitMenuButton"
	        android:onClick="onStartTestStartTestButtonClick"
	        android:text="@string/start_test"
	        android:textAppearance="?android:attr/textAppearanceSmall" />

	    <Button
	        android:id="@+id/StartTestExitMenuButton"
	        android:layout_width="150sp"
	        android:layout_height="50sp"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/textView1"
	        android:layout_marginTop="30sp"
	        android:onClick="onStartTestExitMenuButtonClick"
	        android:text="@string/exit_menu"
	        android:textAppearance="?android:attr/textAppearanceSmall" />

       </RelativeLayout>
 </ScrollView>
